--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,9 @@
 body {
-background: url("shadow.jpg");
+background-attachment: fixed;
+background-image: url("shadow.jpg");
+background-size: 100%;
+height: 100%;
+width: 100%;
 }
 
 h1,p {
