--- a/layout.css
+++ b/layout.css
@@ -8,5 +8,12 @@ width: 100%;
 
 h1,p {
 font-weight: bold;
-font-size: 20px;
+font-size: 40px;
+color: white;
+}
+
+h2 {
+font-weight: bold;
+font-size: 40px;
+color: white;
 }
